# ToyCC

./: .gitignore  ASTNode.h  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  Decl.cpp  Decl.h  Expr.cpp  Expr.h  LICENSE  OperationKinds.def  Parser.cpp  Parser.h  README.md  Stmt.cpp  Stmt.h  TokenKinds.def  lexer.cpp  lexer.h  main.cpp  token.cpp  token.h
